--- a/src/index.css
+++ b/src/index.css
@@ -93,8 +93,7 @@ small,
   text-align: center;
   color: var(--black);
   padding: 1rem 0;
-  background: #cf3654;
-  background: linear-gradient(to left, #cf3654 0%, #000000 100%);
+  background: #F6F8F9;
 }
 .underline {
   width: 12rem;
@@ -105,7 +104,6 @@ small,
 .title h3 {
   margin: 0;
   font-weight: bold;
-  color: var(--white);
 }
 
 /* end of title */
@@ -114,12 +112,12 @@ small,
   min-height: 12rem;
   background: #f4f4f4;
   background: #362f0d;
-  background: linear-gradient(to right, #362f0d 0%, #abbd73 92%);
+  background: linear-gradient(to right, #84773a 0%, #abbd73 92%);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(333px, 1fr));
 }
 .selector {
-  color: rgb(255, 255, 255);
+  color: rgb(238, 238, 238);
   padding: 2rem;
 }
 
