--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,7 @@ small,
   min-height: 12rem;
   background: #f4f4f4;
   background: #362f0d;
+  position: relative;
   background: linear-gradient(to right, #84773a 0%, #abbd73 92%);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(333px, 1fr));
@@ -227,4 +228,62 @@ input[type="color"] {
 }
 .single-button:hover .copy-code {
   opacity: 1;
+}
+.toast {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.progress {
+  width: 100%;
+  height: 5px;
+  background-color: #e47e11;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  animation: progressBar 3s linear forwards;
+  transform-origin: left;
+}
+.message{
+   text-transform: capitalize;
+   padding-inline: .7rem;
+}
+@keyframes progressBar {
+  0% {
+    transform: scaleX(1);
+  }
+  100% {
+    transform: scaleX(0);
+  }
+}
+.visible {
+  animation: jumpIn .7s linear forwards;
+}
+
+@keyframes jumpIn {
+  0% {
+    transform: translateY(100%);
+    opacity: .1;
+  }
+  60% {
+    transform: translateY(-10%);
+    opacity: .5;
+  }
+  80% {
+    transform: translateY(5%);
+    opacity: .75;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
